Modificacion sustituciones, expulsion de arquero y ataque/defensa en base a formation